# sqlalchemy-shallow-deepdive

./: 0.precursor.ipynb  1.sa-sql.ipynb  2.sa-core.ipynb  3.sa-orm.ipynb  README.md  docker-compose.yml  guild.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
sa2_swing/: config.py  sa_core.py
tests/: test_sa2_swing.py
