[tool.poetry]
name = "sa2-swing"
version = "0.1.0"
description = ""
authors = ["Collin Choy <collin@ripplematch.com>"]

[tool.poetry.dependencies]
python = "^3.7"
SQLAlchemy = "^1.4"
ipykernel = "^6.7.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
